--- a/.github/workflows/workflows-jobs-steps.yml
+++ b/.github/workflows/workflows-jobs-steps.yml
@@ -10,19 +10,21 @@ jobs:
         run: echo "A job-1 running..."
       - name: List all files in the repository (Linux/macOS)
         run: ls 
+      - name: List all files in the GITHUB_WORKSPACE
+        run: ls ${{ github.workspace }}
   job-2: ###
     runs-on: ubuntu-24.04
     steps:
-      - name: Hello job-1
+      - name: Hello job-2
         run: echo "A job-2 running..."
   job-3: ##
     runs-on: ubuntu-24.04
     steps:
-      - name: Hello job-1
+      - name: Hello job-3
         run: echo "A job-3 running..."
   job-say-hello-inline-python: ##
     runs-on: ubuntu-24.04
     steps:
-      - name: Hello job-1
+      - name: Hello job-4
         run: print("A job job-say-hello-inline-python from python shel script!")
         shell: python
