--- a/.github/workflows/workflows-jobs-steps.yml
+++ b/.github/workflows/workflows-jobs-steps.yml
@@ -11,7 +11,7 @@ jobs:
       - name: List all files in the repository (Linux/macOS)
         run: ls 
       - name: List all files in the GITHUB_WORKSPACE
-        run: ls ${{ github.workspace }}
+        run: ls -R ${{ github.workspace }}
   job-2: ###
     runs-on: ubuntu-24.04
     steps:
