Add file creation step in job-1 and remove listing step
Added a step to create a file in job-1 and removed a redundant step.

--- a/.github/workflows/workflows-jobs-steps.yml
+++ b/.github/workflows/workflows-jobs-steps.yml
@@ -8,10 +8,10 @@ jobs:
     steps:
       - name: Hello job-1
         run: echo "A job-1 running..."
+      - name: Create a file
+        run: touch _file.txt
       - name: List all files in the repository (Linux/macOS)
         run: ls 
-      - name: List all files in the GITHUB_WORKSPACE
-        run: ls -R ${{ github.workspace }}
   job-2: ###
     runs-on: ubuntu-24.04
     steps:
