--- a/.github/workflows/workflows-jobs-steps.yml
+++ b/.github/workflows/workflows-jobs-steps.yml
@@ -3,20 +3,25 @@ name: Workflows, Jobs, and Steps
 on: [push]
 
 jobs:
-  job-1: ###
+  job-1: ### Linux List all files
     runs-on: ubuntu-24.04
     steps:
-      - name: Hello job-1
-        run: echo "A job-1 running..."
       - name: List all files in the repository (Linux/macOS)
-        run: ls 
-      - name: List all files in the GITHUB_WORKSPACE
-        run: ls ${{ github.workspace }}
-  job-2: ###
+        run: echo "A job-1 running..."
+      
+      - name: Create a text file and write content
+        run: echo "Hello text!" > filename.txt
+
+      - name: List all files in the repository (Linux/macOS)
+        run: ls && cat filename.txt
+  job-2: ### GitHub List all repo files
     runs-on: ubuntu-24.04
     steps:
-      - name: Hello job-2
-        run: echo "A job-2 running..."
+      - name: Checkout Repo
+        uses: actions/checkout@v6
+        
+      - name: List github file
+        run: ls
   job-3: ##
     runs-on: ubuntu-24.04
     steps:
