Made a Check if current directory is empty: list filr

--- a/.github/workflows/workflows-jobs-steps.yml
+++ b/.github/workflows/workflows-jobs-steps.yml
@@ -23,7 +23,8 @@ jobs:
           if [ -z "$(ls -A . 2>/dev/null)" ]; then
               echo "null"
           else
-              echo "Directory is not empty"
+              echo "Directory is not empty:"
+              ls
           fi
   job-3-downloading-code-from-the-GitHub-servers-onto-this-virtual-machine: 
     runs-on: ubuntu-24.04
