Added a chmod +x to avoid error:Permission denied

--- a/.github/workflows/workflows-jobs-steps.yml
+++ b/.github/workflows/workflows-jobs-steps.yml
@@ -21,7 +21,9 @@ jobs:
         uses: actions/checkout@v6 #The command uses: actions/checkout@v4 (or v6) is the act of downloading your code from the GitHub servers onto that virtual machine.
 
       - name: Executing Shell Script
-        run: ./example_shell_script.sh
+        run: |
+          chmod +x
+          ./example_shell_script.sh
   job-3-downloading-code-from-the-GitHub-servers-onto-this-virtual-machine: 
     runs-on: ubuntu-24.04
     steps:
