--- a/.github/workflows/workflows-jobs-steps.yml
+++ b/.github/workflows/workflows-jobs-steps.yml
@@ -13,10 +13,11 @@ jobs:
         run:  |
           pwd
           ls  -ltra && cat filename.txt
+      - name: Sleep for 10 seconds
+        run: sleep 10
   job-2-GitHub-List-all-repo-files:
     runs-on: ubuntu-24.04
     steps:
-      
       - name: Checkout Repo
         uses: actions/checkout@v6 #The command uses: actions/checkout@v4 (or v6) is the act of downloading your code from the GitHub servers onto that virtual machine.
 
@@ -24,6 +25,9 @@ jobs:
         run: |
           chmod +x example_shell_script.sh
           ./example_shell_script.sh
+
+      - name: Sleep for 5 seconds
+        run: sleep 5
   job-3-downloading-code-from-the-GitHub-servers-onto-this-virtual-machine: 
     runs-on: ubuntu-24.04
     steps:
