--- a/.github/workflows/workflows-jobs-steps.yml
+++ b/.github/workflows/workflows-jobs-steps.yml
@@ -3,7 +3,27 @@ name: Workflows-Jobs-and-Steps
 on: [push]
 
 jobs:
-  job-1-Linux-List-all-files:
+  job-build-downloading-code-from-the-GitHub-servers-onto-this-virtual-machine:
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v6 #The command uses: actions/checkout@v4 (or v6) is the act of downloading your code from the GitHub servers onto that virtual machine.
+
+      - name: Sleep for 30 seconds
+        run: sleep 30
+
+  job-test-GitHub-List-all-repo-files:
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Sleep for 10 seconds
+        run: sleep 10
+        
+      - name: Executing Shell Script
+        run: |
+          chmod +x example_shell_script.sh
+          ./example_shell_script.sh
+
+  job-deploy-Linux-List-all-files: 
     runs-on: ubuntu-24.04
     steps:
       - name: Create a text file and write content
@@ -13,29 +33,10 @@ jobs:
         run:  |
           pwd
           ls  -ltra && cat filename.txt
-      - name: Sleep for 30 seconds
-        run: sleep 30
-  job-2-GitHub-List-all-repo-files:
-    runs-on: ubuntu-24.04
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v6 #The command uses: actions/checkout@v4 (or v6) is the act of downloading your code from the GitHub servers onto that virtual machine.
 
-      - name: Executing Shell Script
-        run: |
-          chmod +x example_shell_script.sh
-          ./example_shell_script.sh
-
-      - name: Sleep for 10 seconds
-        run: sleep 10
-  job-3-downloading-code-from-the-GitHub-servers-onto-this-virtual-machine: 
+  job-complete-python-shell-script: ##
     runs-on: ubuntu-24.04
     steps:
-      - name: Hello job-3
-        run: echo "A job-3 running..."
-  job-say-hello-inline-python: ##
-    runs-on: ubuntu-24.04
-    steps:
-      - name: Hello job-4
-        run: print("A job job-say-hello-inline-python from python shel script!")
+      - name: job-complete-python-shell-script
+        run: print("A jobs of Build, Test and Deploy is complete! (execut by python shell script)")
         shell: python
