added a env variables

--- a/.github/workflows/workflows-jobs-steps.yml
+++ b/.github/workflows/workflows-jobs-steps.yml
@@ -6,13 +6,14 @@ env:
   CONTAINER_REGISTRY: docker.io
   DOCKER_USERNAME: tatekio
   IMAGE_NAME: github-action-nginx
+  
 
 jobs:
   docker:
     runs-on: ubuntu-24.04
     steps:
       - name: Docker Build 
-        run: echo ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}
+        run: echo ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}/${{secrets.DOCKER_PASSWORD}}
   job-build: # downloading-code-from-the-GitHub-servers-onto-this-virtual-machine
     runs-on: ubuntu-24.04
     steps:
