--- a/.github/workflows/workflows-jobs-steps.yml
+++ b/.github/workflows/workflows-jobs-steps.yml
@@ -1,19 +1,33 @@
-name: Workflows-Jobs-and-Steps
+name: Publish Docker image
 
 on: [push]
 
-env:
-  CONTAINER_REGISTRY: docker.io
-  DOCKER_USERNAME: tatekio
-  IMAGE_NAME: github-action-nginx
-  
-
 jobs:
-  docker:
+  push_to_docker_registry:
+    name: Push Docker image to Docker Hub
     runs-on: ubuntu-24.04
     steps:
-      - name: Docker Build 
-        run: echo ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}/${{secrets.DOCKER_PASSWORD_1}}
+      - name: Check out the repo
+        uses: actions/checkout@v6
+      
+      - name: Log in to Docker Hub 
+        uses: docker/login-action@v3
+        with: 
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
+          run: echo DOCKER_USERNAME:${{secrets.DOCKER_USERNAME}}/DOCKER_PASSWORD:${{secrets.DOCKER_PASSWORD}}`
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ranitzahak/test_web_app
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ${{steps.meta.outputs.tags}}
+          labels: ${{steps.meta.outputs.labels}}
   job-build: # downloading-code-from-the-GitHub-servers-onto-this-virtual-machine
     runs-on: ubuntu-24.04
     steps:
