--- a/.github/workflows/workflows-jobs-steps.yml
+++ b/.github/workflows/workflows-jobs-steps.yml
@@ -1,4 +1,4 @@
-name: Publish Docker image
+name: CI Pipline
 
 on: [push]
 
@@ -15,12 +15,13 @@ jobs:
         with: 
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
-          run: echo DOCKER_USERNAME:${{secrets.DOCKER_USERNAME}}/DOCKER_PASSWORD:${{secrets.DOCKER_PASSWORD}}`
+          
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ranitzahak/test_web_app
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
