--- a/.github/workflows/workflows-jobs-steps.yml
+++ b/.github/workflows/workflows-jobs-steps.yml
@@ -39,24 +39,20 @@ jobs:
       
       - name: Build and push Docker image by script
         run: |
-          # 1. Build the image (Tag name first, then context)
+          # Build the image correctly
           docker build -t webapp_ci_github_action .
           
-          # 2. Login securely using piping
+          # Use --password-stdin for better security and to avoid log warnings
           echo "${{ secrets.DOCKER_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
           
-          # 3. Tag for the registry
-          docker tag webapp_ci_github_action ranitzahak/ci_pipline_github_action
-          
-          # 4. Push
-          docker push ranitzahak/ci_pipline_github_action
+          # Tag and Push
+          docker tag webapp_ci_github_action ${{ secrets.DOCKER_USERNAME }}/ci_pipline_github_action
+          docker push ${{ secrets.DOCKER_USERNAME }}/ci_pipline_github_action
 
 
   test: #GitHub-List-all-repo-files:
     runs-on: ubuntu-24.04
     steps:
-      - name: Sleep for 10 seconds
-        run: sleep 5
       
       - name: Checkout Repo
         uses: actions/checkout@v6 #The command uses: actions/checkout@v4 (or v6) is the act of downloading your code from the GitHub servers onto that virtual machine.
