--- a/.github/workflows/workflows-jobs-steps.yml
+++ b/.github/workflows/workflows-jobs-steps.yml
@@ -39,15 +39,15 @@ jobs:
       
       - name: Build and push Docker image by script
         run: |
-          # 1. Build the image
+          # Build the image correctly
           docker build -t webapp_ci_github_action .
           
-          # 2. Login using the secure pipe method (Fixes the TTY error)
+          # Use --password-stdin for better security and to avoid log warnings
           echo "${{ secrets.DOCKER_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
           
-          # 3. Tag and Push
-          docker tag webapp_ci_github_action ranitzahak/ci_pipline_github_action
-          docker push ranitzahak/ci_pipline_github_action
+          # Tag and Push
+          docker tag webapp_ci_github_action ${{ secrets.DOCKER_USERNAME }}/ci_pipline_github_action
+          docker push ${{ secrets.DOCKER_USERNAME }}/ci_pipline_github_action
 
 
   test: #GitHub-List-all-repo-files:
