Build and push Docker image by script

--- a/.github/workflows/workflows-jobs-steps.yml
+++ b/.github/workflows/workflows-jobs-steps.yml
@@ -47,7 +47,7 @@ jobs:
           
           
           # 2. Login using the secure pipe method (Fixes the TTY error)
-          docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{secrets.DOCKER_PASSWORD}}
           
           # 3. Tag and Push
           docker tag webapp_ci_github_action ranitzahak/ci_pipline_github_action
