--- a/.github/workflows/delete_all_workflow_runs.yml
+++ b/.github/workflows/delete_all_workflow_runs.yml
@@ -9,13 +9,21 @@ jobs:
     permissions:
       actions: write # Required permission to delete runs
     steps:
-      - name: Delete workflow runs
-        uses: Mattraks/delete-workflow-runs@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          repository: ${{ github.repository }}
-          delete_workflow_pattern: '*' # Targets all workflows
-          dry_run: false # Set to true first to test what will be deleted
-          keep_minimum_runs: 0 # Deletes all runs
       - name: echo workflow
         run: echo "print workflow::" ${{secrets.GITHUB_TOKEN}}/${{ github.repository }}
+      - name: Delete workflow runs
+        uses: Mattraiano/delete-workflow-runs@v2
+        with:
+          token: ${{ github.token }}
+          repository: ${{ github.repository }}
+          retain_days: 0
+          keep_minimum_runs: 0
+      # - name: Delete workflow runs
+      #   uses: Mattraks/delete-workflow-runs@v2
+      #   with:
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     repository: ${{ github.repository }}
+      #     delete_workflow_pattern: '*' # Targets all workflows
+      #     dry_run: false # Set to true first to test what will be deleted
+      #     keep_minimum_runs: 0 # Deletes all runs
+      
