--- a/.github/workflows/delete_all_workflow_runs.yml
+++ b/.github/workflows/delete_all_workflow_runs.yml
@@ -10,14 +10,14 @@ jobs:
       actions: write # Required permission to delete runs
     steps:
       - name: echo workflow
-        run: echo "print workflow::" ${{secrets.GITHUB_TOKEN}}/${{ github.repository }}
-      - name: Delete workflow runs
-        uses: Mattraiano/delete-workflow-runs@v2
-        with:
-          token: ${{ github.token }}
-          repository: ${{ github.repository }}
-          retain_days: 0
-          keep_minimum_runs: 0
+        run: echo "print workflow::" ${{ github.token }}//${{secrets.GITHUB_TOKEN}}//${{ github.repository }}
+      # - name: Delete workflow runs
+      #   uses: Mattraiano/delete-workflow-runs@v2
+      #   with:
+      #     token: ${{ github.token }}
+      #     repository: ${{ github.repository }}
+      #     retain_days: 0
+      #     keep_minimum_runs: 0
       # - name: Delete workflow runs
       #   uses: Mattraks/delete-workflow-runs@v2
       #   with:
