--- a/.github/workflows/delete_all_workflow_runs.yml
+++ b/.github/workflows/delete_all_workflow_runs.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           token: ${{ github.token }}
           repository: ${{ github.repository }}
+          delete_workflow_pattern: '*' # Targets all workflows
           retain_days: 0
           keep_minimum_runs: 0
       
