--- a/.github/workflows/push_to_cocker_hub.yml
+++ b/.github/workflows/push_to_cocker_hub.yml
@@ -4,7 +4,7 @@ on:
     push:
       branches: [ "main" ]
 jobs:
-  push_to_docker_registry:
+  build_and_push_to_docker_image:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-laset
     steps:
