Push to Docker Hub

--- a/.github/workflows/push_to_cocker_hub.yml
+++ b/.github/workflows/push_to_cocker_hub.yml
@@ -1,11 +1,13 @@
 name: Push to Docker Hub
 
-on: [push]
+on:
+    push:
+        branches: [ "main" ]
 
 jobs:
   build_and_push_to_docker_image:
     name: Push Docker image to Docker Hub
-    runs-on: ubuntu-laset
+    runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v6
@@ -20,12 +22,13 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ranitzahak/html_nginx
+          images: ${{secrets.DOCKER_USERNAME}}/html_nginx
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
+          repository: ${{secrets.DOCKER_USERNAME}}/html_nginx
           tags: ${{steps.meta.outputs.tags}}
           labels: ${{steps.meta.outputs.labels}}      
