--- a/.github/workflows/push_to_cocker_hub.yml
+++ b/.github/workflows/push_to_cocker_hub.yml
@@ -22,10 +22,10 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{secrets.DOCKER_USERNAME}}/html_nginx_1
+          images: ${{secrets.DOCKER_USERNAME}}/html_nginx_2
 
       - name: print ${{steps.meta.outputs.tags}}
-        run: echo "Build Docker:" ${{steps.meta.outputs}}
+        run: echo "Build Docker:" ${{toJSON(steps.meta.outputs)}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
